[tool.poetry]
name = "cbapi"
version = "0.1.0"
description = "This starts up the api server"

[tool.poetry.dependencies]
python = "^3.9.14"
fastapi = "^0.82.0"
uvicorn = "^0.18.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"